cluster-components/jenkins/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:2.263.3
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        resources:
          limits:
            cpu: 2
            memory: 4G
      volumes:
      - name: jenkins-home
        emptyDir: {}
      - name: plugin-list
        configMap:
          name: plugin-list
---
