cluster-components/jenkins/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - targetPort: 8080
    port: 80
---
